feat(update-coordinates): longitude and latitude coordinates are updated when the page loads

--- a/public/styles/reset-password.css
+++ b/public/styles/reset-password.css
@@ -1,59 +1,10 @@
-body::before {
-  content: "";
-  display: inline-block;
-  margin-right: 100px;
-  width: 0;
-  height: 0;
-  border-left: clamp(40px, 100px, 200px) solid transparent;
-  border-right: clamp(80px, 200px, 400px) solid transparent;
-  border-bottom: clamp(80px, 200px, 400px) solid #7d5fff;
-  position: absolute;
-  z-index: -1;
-  bottom: 30%;
-  left: 20%;
-  -webkit-transform: rotate(30deg);
-          transform: rotate(30deg);
-}
-
-body::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: clamp(50px, 100px, 500px);
-  height: clamp(50px, 100px, 500px);
-  border-radius: 30px;
-  background: #7d5fff;
-  position: absolute;
-  top: 20%;
-  right: 40%;
-  z-index: -1;
-  -webkit-transform: rotate(10deg);
-          transform: rotate(10deg);
-}
-
-::-webkit-scrollbar {
-  width: 1.25rem;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #ffffff11;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  border-radius: 50px;
-  border: 0.5px solid #ffffff8a;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #ffffff8a;
-  border: none;
-}
-
-.login-wrapper {
-  min-width: 200px;
+@import url("./_functions.scss");
+.reset-password-wrapper {
+  min-width: converToRem(150rem);
   width: 50%;
-  height: 25rem;
+  height: convertToRem(400rem);
   background: #7e7d7db2;
-  border-radius: 1.875rem;
+  border-radius: clamp(20px, 25px, 35px);
   border: 1px solid #7c5fffdc;
   -webkit-box-shadow: 0 0 10px 0.1px #7c5fffd3;
           box-shadow: 0 0 10px 0.1px #7c5fffd3;
@@ -65,34 +16,63 @@ body::after {
       -ms-flex-align: center;
           align-items: center;
   margin: auto;
+  padding: 2%;
   margin-top: 5%;
-  padding: 1.875rem;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
 }
 
-.login-wrapper .title {
+.reset-password-wrapper .title {
   font-size: clamp(20px, 5px, 10%);
   color: #fafafa;
   font-family: "Poppins", sans-serif;
   text-align: center;
 }
 
-.login-wrapper .form-wrapper {
+.reset-password-wrapper .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: clamp(15px, 17.5px, 20px);
+  font-weight: 700;
+  font-family: "Poppins";
+  color: #2ecc71;
+  cursor: default;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+
+.reset-password-wrapper .description::before {
+  content: "";
+  width: 2px;
+  height: 20px;
+  display: none;
+  background: #fff;
+  margin-right: 5px;
+  margin-top: 0.5%;
+}
+
+.reset-password-wrapper .description:hover::before {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.reset-password-wrapper .form-wrapper {
   display: block;
   width: 100%;
 }
 
-.login-wrapper .form-wrapper input {
+.reset-password-wrapper .form-wrapper input {
   width: 100%;
-  min-width: 9.375rem;
+  min-width: 200px;
   height: 50px;
   border: none;
   background: #9e9e9e94;
   color: #c0bdbd;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
-  font-size: 1.0625rem;
+  font-size: convertToRem(17rem);
   padding: 20px;
   border-radius: 20px;
   margin-top: 10px;
@@ -100,11 +80,11 @@ body::after {
   transition: ease 0.5s focus;
 }
 
-.login-wrapper .form-wrapper input::-webkit-input-placeholder {
+.reset-password-wrapper .form-wrapper input::-webkit-input-placeholder {
   color: #c0bdbd;
 }
 
-.login-wrapper .form-wrapper input:focus {
+.reset-password-wrapper .form-wrapper input:focus {
   border-bottom: 3px solid #7d5fff;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -113,18 +93,18 @@ body::after {
   color: #fff;
 }
 
-.login-wrapper .form-wrapper input:hover {
+.reset-password-wrapper .form-wrapper input:hover {
   -webkit-transition: ease 0.3s;
   transition: ease 0.3s;
   opacity: 0.5;
 }
 
-.login-wrapper .form-wrapper button[type="submit"] {
+.reset-password-wrapper .form-wrapper button[type="submit"] {
   width: clamp(40%, 50%, 80%);
-  min-width: 6.25rem;
-  height: 2.5rem;
+  min-width: convertToRem(100rem);
+  height: convertToRem(40rem);
   border: none;
-  border-radius: 3.125rem;
+  border-radius: clamp(40px, 50px, 65px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -136,6 +116,7 @@ body::after {
           justify-content: center;
   margin: auto;
   margin-top: 15%;
+  padding: 2%;
   font-size: clamp(15px, 15%, 35px);
   font-weight: bold;
   font-family: "Baloo", sans-serif;
@@ -147,24 +128,24 @@ body::after {
   transition: all 0.4s ease;
 }
 
-.login-wrapper .form-wrapper button[type="submit"]:hover {
+.reset-password-wrapper .form-wrapper button[type="submit"]:hover {
   opacity: 0.5;
 }
 
-.login-wrapper .form-wrapper button[type="submit"]:active {
+.reset-password-wrapper .form-wrapper button[type="submit"]:active {
   border: 2px solid #fff;
   opacity: 0.3;
 }
 
-.login-wrapper .form-wrapper .auth-actions {
+.reset-password-wrapper .form-wrapper .auth-actions {
   display: block;
   width: 100%;
   height: auto;
-  margin-top: 0.625rem;
+  margin-top: 5%;
 }
 
-.login-wrapper .form-wrapper .auth-actions a {
-  font-size: clamp(0.84375rem, 1.03125rem, converToRem(19rem));
+.reset-password-wrapper .form-wrapper .auth-actions a {
+  font-size: clamp(convertToRem(13.5rem), convertToRem(16.5rem), converToRem(19rem));
   font-family: "Baloo", sans-serif;
   font-weight: 600;
   display: block;
@@ -173,21 +154,21 @@ body::after {
   color: #fff;
 }
 
-.login-wrapper .form-wrapper .auth-actions a:hover {
+.reset-password-wrapper .form-wrapper .auth-actions a:hover {
   opacity: 1;
   -webkit-text-decoration-style: dashed;
           text-decoration-style: dashed;
 }
 
-.login-wrapper .form-wrapper .auth-actions a:nth-child(1):hover {
+.reset-password-wrapper .form-wrapper .auth-actions a:nth-child(1):hover {
   color: #8f77fa;
   -webkit-text-decoration-color: #8f77fa;
           text-decoration-color: #8f77fa;
 }
 
-.login-wrapper .form-wrapper .auth-actions a:nth-child(2):hover {
+.reset-password-wrapper .form-wrapper .auth-actions a:nth-child(2):hover {
   color: #2ecc71;
   -webkit-text-decoration-color: #2ecc71;
           text-decoration-color: #2ecc71;
 }
-/*# sourceMappingURL=login.css.map */
+/*# sourceMappingURL=reset-password.css.map */
