--- a/public/styles/reset-password.scss
+++ b/public/styles/reset-password.scss
@@ -1,68 +1,19 @@
-@import "./functions";
+@import url("./_functions.scss");
 
-body {
-  &::before {
-    content: "";
-    display: inline-block;
-    margin-right: 100px;
-    width: 0;
-    height: 0;
-    border-left: clamp(40px, 100px, 200px) solid transparent;
-    border-right: clamp(80px, 200px, 400px) solid transparent;
-    border-bottom: clamp(80px, 200px, 400px) solid #7d5fff;
-    position: absolute;
-    z-index: -1;
-    bottom: 30%;
-    left: 20%;
-    transform: rotate(30deg);
-  }
-
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: clamp(50px, 100px, 500px);
-    height: clamp(50px, 100px, 500px);
-    border-radius: 30px;
-    background: #7d5fff;
-    position: absolute;
-    top: 20%;
-    right: 40%;
-    z-index: -1;
-    transform: rotate(10deg);
-  }
-}
-
-::-webkit-scrollbar {
-  width: convertToRem(20rem);
-}
-
-::-webkit-scrollbar-thumb {
-  background: #ffffff11;
-  transition: all 0.4s ease;
-  border-radius: 50px;
-  border: 0.5px solid #ffffff8a;
-
-  &:hover {
-    background: #ffffff8a;
-    border: none;
-  }
-}
-
-.login-wrapper {
-  min-width: 200px;
+.reset-password-wrapper {
+  min-width: converToRem(150rem);
   width: 50%;
   height: convertToRem(400rem);
   background: #7e7d7db2;
-  border-radius: convertToRem(30rem);
+  border-radius: clamp(20px, 25px, 35px);
   border: 1px solid #7c5fffdc;
   box-shadow: 0 0 10px 0.1px #7c5fffd3;
   display: block;
   justify-content: center;
   align-items: center;
   margin: auto;
+  padding: 2%;
   margin-top: 5%;
-  padding: convertToRem(30rem);
   backdrop-filter: blur(2px);
 
   .title {
@@ -72,13 +23,39 @@ body {
     text-align: center;
   }
 
+  .description {
+    display: flex;
+    font-size: clamp(15px, 17.5px, 20px);
+    font-weight: 700;
+    font-family: "Poppins";
+    color: #2ecc71;
+    cursor: default;
+    transition: all 0.6s ease;
+
+    &::before {
+      content: "";
+      width: 2px;
+      height: 20px;
+      display: none;
+      background: #fff;
+      margin-right: 5px;
+      margin-top: 0.5%;
+    }
+
+    &:hover {
+      &::before {
+        display: flex;
+      }
+    }
+  }
+
   .form-wrapper {
     display: block;
     width: 100%;
 
     input {
       width: 100%;
-      min-width: convertToRem(150rem);
+      min-width: 200px;
       height: max(40px, 50px);
       border: none;
       background: #9e9e9e94;
@@ -114,13 +91,13 @@ body {
       min-width: convertToRem(100rem);
       height: convertToRem(40rem);
       border: none;
-      border-radius: convertToRem(50rem);
+      border-radius: clamp(40px, 50px, 65px);
       display: flex;
       align-items: center;
       justify-content: center;
       margin: auto;
       margin-top: 15%;
-
+      padding: 2%;
       font-size: clamp(15px, 15%, 35px);
       font-weight: bold;
       font-family: "Baloo", sans-serif;
@@ -144,7 +121,7 @@ body {
       display: block;
       width: 100%;
       height: auto;
-      margin-top: convertToRem(10rem);
+      margin-top: 5%;
 
       a {
         font-size: clamp(
