--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/general.css" />
     <script
       src="https://kit.fontawesome.com/4bae6c4864.js"
       crossorigin="anonymous"
@@ -25,6 +26,9 @@
     <script src="/__/firebase/init.js"></script>
 
     <title>Robot Speaker | By Allan Julie</title>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   </head>
   <body>
     <div class="confirm-delete hidden">
@@ -96,7 +100,7 @@
         </button>
       </div>
     </section>
-
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/scripts/index.js" type="module"></script>
 
     <script
@@ -118,6 +122,11 @@
 
     <script
       src="/scripts/services/deleteConversation.js"
+      type="module"
+    ></script>
+
+    <script
+      src="/scripts/controllers/handlers/handleSubmitMessages.js"
       type="module"
     ></script>
   </body>
