--- a/src/views/resetPassword.ejs
+++ b/src/views/resetPassword.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Robto Speaker | Forget Password</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;800&display=swap"
       rel="stylesheet"
@@ -12,18 +13,18 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/login.css" />
+    <link rel="stylesheet" href="/styles/reset-password.css" />
     <link rel="stylesheet" href="/styles/parts.css" />
     <link rel="stylesheet" href="/styles/general.css" />
-    <title>Robot Speaker | Login</title>
   </head>
   <body>
     <%- include('parts/simpleHeader') %>
 
-    <div class="login-wrapper">
-      <h3 class="title">Make your login!</h3>
+    <div class="reset-password-wrapper">
+      <h3 class="title">Reset your password</h3>
+      <p class="description">Type your email to reset your password.</p>
       <div class="form-wrapper">
-        <form class="form" action="/login" method="POST">
+        <form class="form" action="/reset-password" method="POST">
           <input
             type="email"
             placeholder="Type your email"
@@ -34,21 +35,10 @@
             oninvalid="handleInvalid(event, 'E-mail is required!')"
             oninput="handleInvalid(event)"
           />
-          <input
-            type="password"
-            placeholder="Type your password"
-            name="password"
-            aria-label="Password"
-            required
-            aria-required="true"
-            oninvalid="handleInvalid(event, 'The password is required!')"
-            oninput="handleInvalid(event)"
-            minlength="8"
-          />
-          <button type="submit">Login</button>
+          <button type="submit">Reset</button>
         </form>
         <div class="auth-actions">
-          <a href="/reset-password">Forget the password?</a>
+          <a href="/login">Login</a>
           <a href="/sign-up">Sign Up</a>
         </div>
       </div>
